--- a/views/layout/about/mission.ejs
+++ b/views/layout/about/mission.ejs
@@ -1,9 +1,9 @@
-<div class="about_container relative padding-bottom-5">
+<div class="about_container relative padding-bottom-5 padding-top-5 mobile-padding-top-bottom-10">
     <div class="row">
-        <div class="col-3 mobile_divide"></div>
-        <div class="col-6 mobile_mission_container">
-            <p class="about_title"> Our Mission </p>
-            <p class="about_description mission_text_size">
+        <div class="col-3 mobile-col-1"></div>
+        <div class="col-6 mobile-col-10">
+            <p class="about_title white text-center font-40 padding-top-5 akrobat"> Our Mission </p>
+            <p class="about_description mobile-font-16 mission_text_size mobile-padding-top-2_5 mobile-font-18 akrobat white padding-top-5 font-25 text-center ">
 
             Our mission is to revolutionize the facility services industry by fostering a team of people who care about the local community and are passionate about the customer.
             </p>
