--- a/views/layout/about/showcase.ejs
+++ b/views/layout/about/showcase.ejs
@@ -1,4 +1,4 @@
-<div class="relative">
+<!-- <div class="relative">
 
   <div class="row relative">
 
@@ -35,4 +35,4 @@
       <img src ="./assets/showcase_1.png" class="width-100 about_showcase_image" id="about_showcase_background"/>
   </div>
 
-</div>
+</div> -->
