--- a/views/layout/about/what_we_do.ejs
+++ b/views/layout/about/what_we_do.ejs
@@ -1,25 +1,25 @@
 <div class="what_we_do_container relative">
 
-    <img src = "./assets/showcase_2.png" class="what_we_do_image whes"/>
-      <div class="what_we_do_inner">
-        <div class="row margin-top-5">
+    <img src = "./assets/showcase_2.png" class="what_we_do_image absolute z-3 width-100 top-0 mobile-relative mobile-padding-bottom-10 mobile-padding-top-20"/>
+      <div class="what_we_do_inner absolute z-3 top-0">
+        <div class="row">
 
-          <div class="col-5 padding-left-5 what_we_do_col">
-            <p class="what_we_do_title"> What We Do </p>
+          <div class="col-5 padding-left-2_5 mobile-col-6_">
+            <p class="what_we_do_title white padding-top-5 font-70 text-left akrobat bold mobile-font-30"> What We Do </p>
 
-              <p class="what_we_do_description">
+              <p class="what_we_do_description font-25 white text-left padding-top-5 akrobat mobile-font-18">
                   A business that looks well maintained is successful. Our company specializes in cleaning windows and patios to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.  Once you hire us, you can trust we will fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
               </p>
 
-              <div class="row margin-top-10">
-                  <div class="col-3 link_col">
-                      <a href="/quote"class="normal_link"><p class="link_about"> Free Quote </p></a>
+              <div class="row margin-top-5">
+                  <div class="col-3 mobile-col-6">
+                      <a href="/quote"class="normal_link"><p class="link_about border-bottom-light-red padding-top-5 akrobat width-80 font-20 white mobile-font-16 text-center" > Free Quote </p></a>
                   </div>
-                  <div class="col-3 link_col">
-                      <p class="link_about"> Contact Us </p>
+                  <div class="col-3 mobile-col-6">
+                      <p class="link_about border-bottom-light-red paddin-bottom-5 text-center padding-top-5 akrobat width-80 font-20 white  mobile-font-16"> Contact Us </p>
                   </div>
-                  <div class="col-3 link_col">
-                    <a href="/#our_clients"class="normal_link"><p class="link_about"> Our Clients </p></a>
+                  <div class="col-3 mobile-col-6">
+                    <a href="/#our_clients"class="normal_link"><p class="link_about border-bottom-light-red paddin-bottom-5 text-center padding-top-5 akrobat width-80 font-20 white  mobile-font-16"> Our Clients </p></a>
                   </div>
               </div>
 
