--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -13,6 +13,10 @@
  .font-20{
    font-size:20px;
  }
+ .padding-top-bottom-10{
+   padding-top:10%;
+   padding-bottom:10%;
+ }
  .border-bottom-light-red{
    border-bottom: 2px solid #FF5757;
  }
