--- a/views/user/about_us.ejs
+++ b/views/user/about_us.ejs
@@ -1,5 +1,5 @@
 
-<%- include("./../layout/about/head.ejs") %>
+<%- include("./../layout/head.ejs") %>
 
 <div id="wrapper" class="<%=lock %> ">
   <div class="container-fluid home_page" >
