--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -1,4 +1,4 @@
-<%- include("./../layout/quote/head.ejs") %>
+<%- include("./../layout/head.ejs") %>
 <div id="wrapper" class="<%=lock %> ">
   <%- include("./../layout/modal.ejs") %>
 
