--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -1,5 +1,5 @@
 
-  <%- include("./../layout/contact/head.ejs") %>
+  <%- include("./../layout/head.ejs") %>
 <div id="wrapper" class="<%=lock %> ">
     <div class="container-fluid home_page padding-bottom-75" >
 
