--- a/public/assets/css/contact_us.css
+++ b/public/assets/css/contact_us.css
@@ -1,6 +1,6 @@
 
 .we_clean_inner{
-  background:url('./../services.png');
+  background:url('./../images/services.png');
 }
 
 @media screen and (max-width:844px){
