--- a/views/layout/about/what_we_do.ejs
+++ b/views/layout/about/what_we_do.ejs
@@ -1,6 +1,6 @@
 <div class="what_we_do_container relative">
 
-    <img src = "./assets/showcase_2.png" class="what_we_do_image absolute z-3 width-100 top-0 mobile-relative mobile-padding-bottom-10 mobile-padding-top-20"/>
+    <img src = "./assets/images/showcase_2.png" class="what_we_do_image absolute z-3 width-100 top-0 mobile-relative mobile-padding-bottom-10 mobile-padding-top-20"/>
       <div class="what_we_do_inner absolute z-3 top-0">
         <div class="row">
 
