--- a/views/layout/modal.ejs
+++ b/views/layout/modal.ejs
@@ -8,7 +8,7 @@
       <div class="col-3 mobile-col-1"></div>
       <div class='col-6 modal_body no-padding mobile-col-10 modal-background border-radius-5px heavy-shadow padding-bottom-2_5'>
 
-          <img class="width-100" src="./assets/window_1.png"/>
+          <img class="width-100" src="./assets/images/window_1.png"/>
           <a href="/exit"><p class="super-max-z font-25 absolute"id="modal_exit">X</p></a>
         <div class="modal-dialog">
 
