--- a/views/layout/new_showcase.ejs
+++ b/views/layout/new_showcase.ejs
@@ -4,7 +4,7 @@
 
       <div class="col-4 no-pad relative no-background z-99 ">
           <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 margin-top-5 logo_container light-blue-background">
-            <img src = "./assets/logo.png"class="width-100" />
+            <img src = "./assets/images/logo.png"class="width-100" />
           </div>
           <div class="background width-50 text-container turquoise-background height-650px mobile-height-600px absolute top--5">
           </div>
