--- a/views/layout/about.ejs
+++ b/views/layout/about.ejs
@@ -8,7 +8,7 @@
           </div>
 
             <div class="col-2">
-              <img src ="./assets/dropdown_arrow.png" _id=1 class="dropdown_arrow half-middle"/>
+              <img src ="./assets/images/dropdown_arrow.png" _id=1 class="dropdown_arrow half-middle"/>
             </div>
           </div>
           <div class="dropdown_container margin-top-2_5 padding-bottom-5 ghost">
@@ -25,7 +25,7 @@
             </div>
 
               <div class="col-2">
-                <img src ="./assets/dropdown_arrow.png" _id=2 class="dropdown_arrow half-middle"/>
+                <img src ="./assets/images/dropdown_arrow.png" _id=2 class="dropdown_arrow half-middle"/>
               </div>
             </div>
             <div class="dropdown_container margin-top-2_5 padding-bottom-5 ghost">
@@ -43,7 +43,7 @@
             </div>
 
               <div class="col-2">
-                <img src ="./assets/dropdown_arrow.png" _id=3 class="dropdown_arrow half-middle"/>
+                <img src ="./assets/images/dropdown_arrow.png" _id=3 class="dropdown_arrow half-middle"/>
               </div>
             </div>
             <div class="dropdown_container margin-top-2_5 padding-bottom-5 ghost">
@@ -60,7 +60,7 @@
             </div>
 
               <div class="col-2">
-                <img src ="./assets/dropdown_arrow.png" _id=4 class="dropdown_arrow half-middle"/>
+                <img src ="./assets/images/dropdown_arrow.png" _id=4 class="dropdown_arrow half-middle"/>
               </div>
             </div>
 
@@ -78,7 +78,7 @@
     </div>
     <div class="col-1"></div>
     <div class="col-6 relative">
-        <img class="about_image height-width-95 max-z absolute " src = "./assets/about.jpg"/>
+        <img class="about_image height-width-95 max-z absolute " src = "./assets/images/about.jpg"/>
         <div class="big_blue_box_about padding-bottom-90 background-009 absolute width-150 mobile-ghost"></div>
         <div class="big_blue_box_about_2 background-308 padding-5 padding-bottom-10 small-z absolute mobile-ghost"></div>
     </div>
