--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -21,12 +21,12 @@
   <div class="container-fluid about_us">
     <p class="text-banner width-40 mobile-width-90  mobile-margin-left-5 mobile-text-center stylized-black text-left margin-left-2 mobile-font-30">Our Values</p>
 
-      <%- include("./../layout/about.ejs")  %>
+      <%- include("./../layout/home/about.ejs")  %>
       <div class="our_work_section background-white relative mobile-margin-top-35">
           <div class="wavy_section width-100">
               <div class = "wave relative width-100 background-006 max-z"></div>
         </div>
-      <%- include("./../layout/top_clients.ejs") %>
+      <%- include("./../layout/home/top_clients.ejs") %>
     </div>
 
     <div class="contact_section padding-5 relative padding-5 height-300 width-100 mobile-margin-top-30">
@@ -36,7 +36,7 @@
     <div class="contact_info_section padding-top-3-rem color-01 line-height-1_5 white-background width-100 background-white relative width-100">
       <p class="text-banner width-50 mobile-width-80 text-left mobile-font-25">489-939-9393 </p>
       <p class="text-banner text-left width-80 mobile-width-90 mobile-font-25">info@customfacilityservices.com </p>
-        <%- include("./../layout/contact.ejs") %>
+        <%- include("./../layout/home/contact.ejs") %>
     </div>
 </div>
 
