--- a/views/user/about_us.ejs
+++ b/views/user/about_us.ejs
@@ -2,12 +2,11 @@
 <%- include("./../layout/head.ejs") %>
 
 <div id="wrapper" class="<%=lock %> ">
+
   <div class="container-fluid home_page" >
 
     <div class="row">
-        <div class="col-12 padding-1 background-1a navbar_container" >
-
-        </div>
+        <div class="col-12 padding-1 background-1a navbar_container" ></div>
     </div>
 
     <div class="showcase-container relative width-100">
@@ -19,5 +18,7 @@
 
 
   </div>
+  
 </div>
+
 <%- include("./../layout/end.ejs") %>
