--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -1,26 +1,29 @@
 <%- include("./../layout/head.ejs") %>
+
 <div id="wrapper" class="<%=lock %> ">
-  <%- include("./../layout/modal.ejs") %>
 
-<div class="container-fluid " >
+    <%- include("./../layout/modal.ejs") %>
 
-  <div class="row">
-      <div class="col-12 padding-1 background-1a navbar_container" >
+    <div class="container-fluid " >
 
+      <div class="row">
+          <div class="col-12 padding-1 background-1a navbar_container" ></div>
       </div>
-  </div>
 
-  <div class="showcase-container relative width-100">
-    <%- include("./../layout/new_showcase.ejs") %>
-  </div>
+      <div class="showcase-container relative width-100">
+        <%- include("./../layout/new_showcase.ejs") %>
+      </div>
 
 
-</div>
-  <br />
+    </div>
 
-  <%- include("./../layout/quote/quote_sheet.ejs") %>
-  <br />
-  <%- include("./../layout/quote/before_and_after.ejs") %>
+    <br />
+
+    <%- include("./../layout/quote/quote_sheet.ejs") %>
+
+    <br />
+
+    <%- include("./../layout/quote/before_and_after.ejs") %>
 
 </div>
 
