--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -1,25 +1,24 @@
 
-  <%- include("./../layout/head.ejs") %>
-<div id="wrapper" class="<%=lock %> ">
+<%- include("./../layout/head.ejs") %>
+
+  <div id="wrapper" class="<%=lock %> ">
+
     <div class="container-fluid home_page padding-bottom-75" >
 
       <div class="row">
-          <div class="col-12 padding-1 navbar_container" >
-
-          </div>
+          <div class="col-12 padding-1 navbar_container" >  </div>
       </div>
 
       <div class="showcase-container relative width-100">
         <%- include("./../layout/new_showcase.ejs") %>
       </div>
+
       <%- include("./../layout/contact/meet_the_owners.ejs") %>
 
-          <%- include("./../layout/contact/what_we_do.ejs") %>
+      <%- include("./../layout/contact/what_we_do.ejs") %>
 
 
-  </div>
-
-
+    </div>
 
   </div>
 
