--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/cfs_modal.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/navbar.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/mobile_navbar.css" />
-    <link rel="stylesheet" type="text/css" href= <%= css_file %> />
+    <link rel="stylesheet" type="text/css" href= <%= showcase.css_file %> />
     <link rel="stylesheet" type="text/css" href="./assets/css/showcase.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/general.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/animations.css" />
