--- a/views/layout/new_showcase.ejs
+++ b/views/layout/new_showcase.ejs
@@ -14,11 +14,11 @@
 
       <div class="intro-text-container width-80">
           <div class="padding-1 big-text-container-ani-1 mobile-width-80 margin-top-2_5 width-45 cfs-heading-background">
-                <p class="font-35 akrobat margin-top-2_5 margin-left-2_5 bold no-space white mobile-font-25"><%= heading_1 %></p>
+                <p class="font-35 akrobat margin-top-2_5 margin-left-2_5 bold no-space white mobile-font-25"><%= showcase.heading_1 %></p>
           </div>
-          
+
             <div class="padding-1 big-text-container-ani-2 mobile-width-110 margin-top-2_5 width-75 cfs-heading-background" >
-                <p class="font-35 akrobat margin-top-2_5 margin-left-2_5 bold no-space white mobile-font-25"><%= heading_2 %></p>
+                <p class="font-35 akrobat margin-top-2_5 margin-left-2_5 bold no-space white mobile-font-25"><%= showcase.heading_2 %></p>
             </div>
 
         <div class="banners row relative">
@@ -33,7 +33,7 @@
     </div>
 
   <div class="showcase_image_container">
-      <img src ='<%= showcase_img %>' class="width-100 showcase_image" id="quote_showcase_background"/>
+      <img src ='<%= showcase.showcase_img %>' class="width-100 showcase_image" id="quote_showcase_background"/>
   </div>
 
 </div>
