--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -1,6 +1,7 @@
 
 .we_clean_inner{
   background:url('./../images/services.png');
+  background-size:cover
 }
 
 @media screen and (max-width:844px){
