--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -13,6 +13,7 @@
 
         <div class="showcase-container relative width-100">
           <%- include("./../layout/new_showcase.ejs") %>
+          <%- include("./../layout/quote_form.ejs") %>
         </div>
 
       </div>
